--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,8 @@
 	<link rel="stylesheet" href="libs/chosen/chosen.min.css">
 	<link rel="stylesheet" href="css/libs.min.css">
 	<link rel="stylesheet" href="css/main.css">
+	<!-- <link rel="stylesheet" href="libs/slider/styles.css"> -->
+	<link rel="stylesheet" href="libs/slider/prrple.slider.css">
 </head>
 <body>
 	
@@ -19,7 +21,7 @@
 								<img src="img/logo-header.svg" class="logo_header" alt="">
 								<div class="content_topbar_leftside_callback">
 									<span class="content_topbar_leftside_callback_text">безкоштовно</span>
-									<span class="content_topbar_leftside_callback_number">0-800-3000-97</span>
+									<a href="tel: +0-800-3000-97" class="content_topbar_leftside_callback_number"> 0-800-3000-97</a>
 								</div>
 							</div>
 							<div class="content_topbar_rightside">
@@ -72,14 +74,48 @@
 					</div>
 				</div>
 			</div>
-			<div class="main-content">12
-				345
+			<div class="main-content">
+				<div class="container" id="sliderz">
+					<div class="slider">
+						<div class="slider_area">
+							<div class="slides">
+								<div class="slide">
+									<div class="slidetitle">
+										<img src="img/field1.jpg" alt="">
+									</div>
+								</div>
+								<div class="slide">
+									<div class="slidetitle">
+										<img src="img/field2.jpg" alt="">
+									</div>
+								</div>
+								<div class="slide">
+									<div class="slidetitle">
+										<img src="img/field3.jpg" alt="">
+									</div>
+								</div>
+								<div class="slide">
+									<div class="slidetitle">
+										<img src="img/field4.jpg" alt="">
+									</div>
+								</div>
+							</div>
+						</div>
+						<a class="slider_left"><i class="fa fa-chevron-left" aria-hidden="true"></i></a>
+						<a class="slider_right"><i class="fa fa-chevron-right" aria-hidden="true"></i></a>
+					</div>
+				</div>
 			</div>
 		</div>	
 	
 	<script src="js/libs.min.js"></script>
+	<script src="libs/slider/jquery.1.11.1.min.js"></script>
 	<script src="https://use.fontawesome.com/895156e50d.js"></script>
 	<script src="libs/chosen/chosen.jquery.min.js"></script>
+	<script src="libs/slider/jquery.touchSwipe.1.6.min.js"></script>
+	<script src="libs/slider/scripts.js"></script>
+	<script src="libs/slider/prrple.slider.js"></script>
+
 	<script src="js/common.js"></script>
 	
 
